RESOLVED FIXED115296
Pressing mouse button inside a dragstart event causes a crash
https://bugs.webkit.org/show_bug.cgi?id=115296
Summary Pressing mouse button inside a dragstart event causes a crash
Ryosuke Niwa
Reported 2013-04-26 20:28:39 PDT
Reproduction steps: 1. Open any page that has dragstart event handler 2. Open inspector and set a breakpoint inside this event handler 3. Trigger the breakpoint by dragging an item in the page 4. Click anywhere on the page (while the script is paused at the breakpoint) 5. Resume from the breakpoint in the inspector Boom!
Attachments
Fixes the bug (4.78 KB, patch)
2013-04-26 20:40 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-04-26 20:29:06 PDT
Ryosuke Niwa
Comment 2 2013-04-26 20:40:15 PDT
Created attachment 199885 [details] Fixes the bug
WebKit Commit Bot
Comment 3 2013-04-27 20:42:23 PDT
Comment on attachment 199885 [details] Fixes the bug Clearing flags on attachment: 199885 Committed r149254: <http://trac.webkit.org/changeset/149254>
WebKit Commit Bot
Comment 4 2013-04-27 20:42:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.